@@ -19,12 +19,8 @@
 */
 package org.miaixz.bus.fabric.network.tls;
 
-import static org.miaixz.bus.fabric.Builder.TLS_SETTINGS_DEFAULT_VERSIONS;
-
-import java.util.Arrays;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Set;
+import java.security.NoSuchAlgorithmException;
+import java.util.*;
 
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.SSLEngine;
@@ -48,50 +44,60 @@ import org.miaixz.bus.fabric.network.tls.cert.CertificatePolicy;
 public final class TlsSettings {
 
     /**
-     * TLS versions.
+     * Immutable, de-duplicated Java TLS protocol names in preference order.
      */
     private final List<String> versions;
 
     /**
-     * TLS cipher suites.
+     * Immutable, de-duplicated JDK cipher-suite names in preference order.
      */
     private final List<String> ciphers;
 
     /**
-     * Client authentication mode.
+     * Server-side client-certificate authentication mode.
      */
     private final TlsClientAuth clientAuth;
 
     /**
-     * Hostname verification flag.
+     * Whether client handshakes verify the peer hostname.
      */
     private final boolean verifyHostname;
 
     /**
-     * Certificate policy.
+     * Trust and local-certificate policy used to build TLS contexts.
      */
     private final CertificatePolicy certificate;
 
     /**
-     * ALPN application protocols.
+     * Immutable, de-duplicated ALPN protocol identifiers in preference order.
      */
     private final List<String> applicationProtocols;
 
     /**
-     * TLS extension flag for SNI and ALPN.
+     * Whether SNI and ALPN extensions may be configured on the engine.
      */
     private final boolean tlsExtensions;
 
     /**
+     * Stable certificate-policy identity captured at construction.
+     */
+    private final Object certificateIdentity;
+
+    /**
+     * Precomputed complete configuration hash.
+     */
+    private final int hashCode;
+
+    /**
      * Creates immutable TLS settings.
      *
-     * @param versions             versions
-     * @param ciphers              ciphers
+     * @param versions             TLS protocol names to validate and snapshot
+     * @param ciphers              cipher-suite names, or an empty list to select JDK defaults
      * @param clientAuth           client authentication mode
-     * @param verifyHostname       hostname verification flag
-     * @param certificate          certificate policy
-     * @param applicationProtocols ALPN application protocols
-     * @param tlsExtensions        TLS extensions flag
+     * @param verifyHostname       whether peer hostnames are verified
+     * @param certificate          trust and local-certificate policy
+     * @param applicationProtocols ALPN identifiers in preference order
+     * @param tlsExtensions        whether SNI and ALPN extensions are supported
      */
     private TlsSettings(final List<String> versions, final List<String> ciphers, final TlsClientAuth clientAuth,
             final boolean verifyHostname, final CertificatePolicy certificate, final List<String> applicationProtocols,
@@ -104,12 +110,14 @@ public final class TlsSettings {
                 .notNull(certificate, () -> new ValidateException("Certificate policy must not be null"));
         this.applicationProtocols = validateApplicationProtocols(applicationProtocols);
         this.tlsExtensions = tlsExtensions;
+        this.certificateIdentity = this.certificate.reuseIdentity();
+        this.hashCode = computeHashCode();
     }
 
     /**
      * Returns default TLS settings.
      *
-     * @return settings
+     * @return immutable settings using safe protocol, trust, verification, and extension defaults
      */
     public static TlsSettings defaults() {
         return builder().build();
@@ -118,7 +126,7 @@ public final class TlsSettings {
     /**
      * Creates a builder.
      *
-     * @return builder
+     * @return a new TLS settings builder initialized with safe defaults
      */
     public static Builder builder() {
         return new Builder();
@@ -127,25 +135,25 @@ public final class TlsSettings {
     /**
      * Returns TLS version snapshot.
      *
-     * @return versions
+     * @return immutable TLS protocol-name snapshot in preference order
      */
     public List<String> versions() {
-        return List.copyOf(versions);
+        return versions;
     }
 
     /**
      * Returns cipher suite snapshot.
      *
-     * @return ciphers
+     * @return immutable enabled cipher-suite snapshot in preference order
      */
     public List<String> ciphers() {
-        return List.copyOf(ciphers);
+        return ciphers;
     }
 
     /**
      * Returns whether client authentication is enabled.
      *
-     * @return true when enabled
+     * @return {@code true} when the configured mode requests or requires a client certificate
      */
     public boolean clientAuth() {
         return clientAuth.enabled();
@@ -163,7 +171,7 @@ public final class TlsSettings {
     /**
      * Returns whether hostname verification is enabled.
      *
-     * @return true when enabled
+     * @return {@code true} when peer hostname verification is enabled
      */
     public boolean verifyHostname() {
         return verifyHostname;
@@ -181,35 +189,85 @@ public final class TlsSettings {
     /**
      * Returns ALPN application protocol snapshot.
      *
-     * @return application protocols
+     * @return immutable ALPN identifier snapshot in preference order
      */
     public List<String> applicationProtocols() {
-        return List.copyOf(applicationProtocols);
+        return applicationProtocols;
     }
 
     /**
      * Returns whether TLS extensions such as SNI and ALPN are enabled.
      *
-     * @return true when enabled
+     * @return {@code true} when SNI and ALPN extensions may be configured
      */
     public boolean supportsTlsExtensions() {
         return tlsExtensions;
     }
 
     /**
+     * Returns whether another object has the same complete TLS configuration identity.
+     *
+     * @param object other object
+     * @return true when the complete configuration is equivalent
+     */
+    @Override
+    public boolean equals(final Object object) {
+        if (this == object) {
+            return true;
+        }
+        if (!(object instanceof TlsSettings other) || hashCode != other.hashCode) {
+            return false;
+        }
+        return verifyHostname == other.verifyHostname && tlsExtensions == other.tlsExtensions
+                && clientAuth == other.clientAuth && certificateIdentity == other.certificateIdentity
+                && versions.equals(other.versions) && ciphers.equals(other.ciphers)
+                && applicationProtocols.equals(other.applicationProtocols);
+    }
+
+    /**
+     * Returns the precomputed complete TLS configuration hash.
+     *
+     * @return configuration hash
+     */
+    @Override
+    public int hashCode() {
+        return hashCode;
+    }
+
+    /**
+     * Computes the complete TLS configuration hash once during construction.
+     *
+     * @return configuration hash
+     */
+    private int computeHashCode() {
+        int result = versions.hashCode();
+        result = 31 * result + ciphers.hashCode();
+        result = 31 * result + clientAuth.hashCode();
+        result = 31 * result + Boolean.hashCode(verifyHostname);
+        result = 31 * result + System.identityHashCode(certificateIdentity);
+        result = 31 * result + applicationProtocols.hashCode();
+        return 31 * result + Boolean.hashCode(tlsExtensions);
+    }
+
+    /**
      * Returns default cipher suites from the current JDK TLS engine.
      *
-     * @return default cipher suites
+     * @return immutable snapshot of cipher suites enabled by a default JDK TLS engine
      */
     private static List<String> defaultCiphers() {
         final SSLEngine engine = defaultEngine();
-        return List.of(engine.getEnabledCipherSuites());
+        final ArrayList<String> ciphers = new ArrayList<>(Arrays.asList(engine.getEnabledCipherSuites()));
+        // AES-128-GCM is the modern JSSE/HTTP client baseline and materially reduces full-handshake CPU.
+        final String preferred = TlsCipherSuite.TLS_AES_128_GCM_SHA256.javaName();
+        if (ciphers.remove(preferred))
+            ciphers.add(0, preferred);
+        return List.copyOf(ciphers);
     }
 
     /**
      * Returns supported cipher suites from the current JDK TLS engine.
      *
-     * @return supported cipher suites
+     * @return immutable set of cipher suites supported by a default JDK TLS engine
      */
     private static Set<String> supportedCiphers() {
         final SSLEngine engine = defaultEngine();
@@ -219,12 +277,13 @@ public final class TlsSettings {
     /**
      * Creates a default engine without opening a connection.
      *
-     * @return engine
+     * @return unconnected engine created from the process default TLS context
+     * @throws ProtocolException if the default TLS context algorithm is unavailable
      */
     private static SSLEngine defaultEngine() {
         try {
             return SSLContext.getDefault().createSSLEngine();
-        } catch (final java.security.NoSuchAlgorithmException e) {
+        } catch (final NoSuchAlgorithmException e) {
             throw new ProtocolException("Default TLS engine is not available", e);
         }
     }
@@ -232,8 +291,9 @@ public final class TlsSettings {
     /**
      * Validates TLS versions.
      *
-     * @param versions versions
-     * @return version snapshot
+     * @param versions non-empty TLS protocol names to validate
+     * @return immutable, de-duplicated Java protocol-name snapshot preserving input order
+     * @throws ValidateException if the list is empty or contains an unsupported or invalid protocol
      */
     private static List<String> validateVersions(final List<String> versions) {
         if (versions == null || versions.isEmpty()) {
@@ -259,9 +319,10 @@ public final class TlsSettings {
     /**
      * Validates cipher suites.
      *
-     * @param ciphers      ciphers
-     * @param allowDefault whether empty means JDK default
-     * @return cipher snapshot
+     * @param ciphers      cipher-suite names to validate
+     * @param allowDefault whether an empty list selects the JDK enabled defaults
+     * @return immutable, de-duplicated JDK cipher-name snapshot preserving input order
+     * @throws ValidateException if the list is invalid, empty when prohibited, or contains an unsupported cipher
      */
     private static List<String> validateCiphers(final List<String> ciphers, final boolean allowDefault) {
         final List<String> checkedCiphers = Assert
@@ -288,8 +349,9 @@ public final class TlsSettings {
     /**
      * Validates ALPN application protocols.
      *
-     * @param protocols protocols
-     * @return protocol snapshot
+     * @param protocols ALPN identifiers to validate
+     * @return immutable, de-duplicated protocol snapshot preserving input order
+     * @throws ValidateException if the list is {@code null} or contains an invalid identifier
      */
     private static List<String> validateApplicationProtocols(final List<String> protocols) {
         final List<String> checkedProtocols = Assert
@@ -304,9 +366,10 @@ public final class TlsSettings {
     /**
      * Validates a single-line token.
      *
-     * @param value value
-     * @param name  field name
-     * @return token
+     * @param value token text to validate and trim
+     * @param name  logical field name included in the validation error
+     * @return trimmed, non-blank, single-line token
+     * @throws ValidateException if the token is blank or contains a line break
      */
     private static String validateToken(final String value, final String name) {
         if (StringKit.isBlank(value) || StringKit.containsAny(value, Symbol.C_CR, Symbol.C_LF)) {
@@ -324,37 +387,37 @@ public final class TlsSettings {
     public static final class Builder {
 
         /**
-         * TLS versions.
+         * Validated TLS protocol names in preference order.
          */
         private List<String> versions;
 
         /**
-         * TLS cipher suites.
+         * Validated cipher-suite names, or an empty list to select JDK enabled defaults at build time.
          */
         private List<String> ciphers;
 
         /**
-         * Client authentication mode.
+         * Server-side client-certificate authentication mode.
          */
         private TlsClientAuth clientAuth;
 
         /**
-         * Hostname verification flag.
+         * Whether client handshakes verify the peer hostname.
          */
         private boolean verifyHostname;
 
         /**
-         * Certificate policy.
+         * Trust and local-certificate policy.
          */
         private CertificatePolicy certificate;
 
         /**
-         * ALPN application protocols.
+         * Validated ALPN identifiers in preference order.
          */
         private List<String> applicationProtocols;
 
         /**
-         * TLS extension flag.
+         * Whether SNI and ALPN extensions may be configured.
          */
         private boolean tlsExtensions;
 
@@ -362,8 +425,8 @@ public final class TlsSettings {
          * Creates a builder with safe defaults.
          */
         private Builder() {
-            this.versions = TLS_SETTINGS_DEFAULT_VERSIONS;
-            this.ciphers = List.of();
+            this.versions = org.miaixz.bus.fabric.Builder.TLS_SETTINGS_DEFAULT_VERSIONS;
+            this.ciphers = List.of(TlsCipherSuite.TLS_AES_128_GCM_SHA256.javaName());
             this.clientAuth = TlsClientAuth.NONE;
             this.verifyHostname = true;
             this.certificate = CertificatePolicy.trustSystem();
@@ -374,8 +437,9 @@ public final class TlsSettings {
         /**
          * Sets TLS versions.
          *
-         * @param versions versions
+         * @param versions non-empty Java or standard TLS protocol names in preference order
          * @return this builder
+         * @throws ValidateException if the list is empty or contains an unsupported or invalid protocol
          */
         public Builder versions(final List<String> versions) {
             this.versions = validateVersions(versions);
@@ -385,8 +449,9 @@ public final class TlsSettings {
         /**
          * Sets TLS cipher suites.
          *
-         * @param ciphers ciphers
+         * @param ciphers non-empty JDK or standard cipher-suite names in preference order
          * @return this builder
+         * @throws ValidateException if the list is empty or contains an unsupported or invalid cipher
          */
         public Builder ciphers(final List<String> ciphers) {
             this.ciphers = validateCiphers(ciphers, false);
@@ -396,8 +461,10 @@ public final class TlsSettings {
         /**
          * Sets TLS cipher suites.
          *
-         * @param ciphers ciphers
+         * @param ciphers non-empty cipher-suite constants in preference order
          * @return this builder
+         * @throws NullPointerException if any array element is {@code null}
+         * @throws ValidateException    if the array is {@code null}, empty, or resolves to an unsupported cipher
          */
         public Builder ciphers(final TlsCipherSuite... ciphers) {
             return cipherSuites(
@@ -410,8 +477,9 @@ public final class TlsSettings {
         /**
          * Sets TLS cipher suites.
          *
-         * @param ciphers ciphers
+         * @param ciphers non-empty cipher-suite constants in preference order
          * @return this builder
+         * @throws ValidateException if the list is empty or resolves to an unsupported cipher
          */
         public Builder cipherSuites(final List<TlsCipherSuite> ciphers) {
             this.ciphers = validateCiphers(TlsCipherSuite.javaNames(ciphers), false);
@@ -431,7 +499,7 @@ public final class TlsSettings {
         /**
          * Sets client authentication.
          *
-         * @param enabled true when enabled
+         * @param enabled {@code true} to require client certificates, or {@code false} to disable client authentication
          * @return this builder
          */
         public Builder clientAuth(final boolean enabled) {
@@ -442,8 +510,9 @@ public final class TlsSettings {
         /**
          * Sets client authentication mode.
          *
-         * @param mode client authentication mode
+         * @param mode explicit client-certificate authentication mode
          * @return this builder
+         * @throws ValidateException if {@code mode} is {@code null}
          */
         public Builder clientAuth(final TlsClientAuth mode) {
             this.clientAuth = Assert.notNull(mode, () -> new ValidateException("Client auth mode must not be null"));
@@ -453,7 +522,7 @@ public final class TlsSettings {
         /**
          * Sets hostname verification.
          *
-         * @param enabled true when enabled
+         * @param enabled whether client handshakes verify the peer hostname
          * @return this builder
          */
         public Builder verifyHostname(final boolean enabled) {
@@ -464,8 +533,9 @@ public final class TlsSettings {
         /**
          * Sets certificate policy.
          *
-         * @param policy certificate policy
+         * @param policy trust and local-certificate policy
          * @return this builder
+         * @throws ValidateException if {@code policy} is {@code null}
          */
         public Builder certificate(final CertificatePolicy policy) {
             this.certificate = Assert
@@ -476,8 +546,9 @@ public final class TlsSettings {
         /**
          * Sets ALPN application protocols.
          *
-         * @param protocols protocols
+         * @param protocols ALPN identifiers in preference order; an empty list disables ALPN offerings
          * @return this builder
+         * @throws ValidateException if the list is {@code null} or contains an invalid identifier
          */
         public Builder applicationProtocols(final List<String> protocols) {
             this.applicationProtocols = validateApplicationProtocols(protocols);
@@ -487,7 +558,7 @@ public final class TlsSettings {
         /**
          * Sets TLS extension support for SNI and ALPN.
          *
-         * @param enabled true when enabled
+         * @param enabled whether SNI and ALPN extensions may be configured
          * @return this builder
          */
         public Builder supportsTlsExtensions(final boolean enabled) {
@@ -498,7 +569,7 @@ public final class TlsSettings {
         /**
          * Builds immutable TLS settings.
          *
-         * @return settings
+         * @return immutable, fully validated TLS settings
          */
         public TlsSettings build() {
             return new TlsSettings(versions, ciphers, clientAuth, verifyHostname, certificate, applicationProtocols,
